# apertium-fra

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  README.md  apertium-fra.fra.acx  apertium-fra.fra.metadix  apertium-fra.fra.rlx  apertium-fra.fra.tsx  apertium-fra.pc.in  apertium-fra.post-fra.dix  buscaPar.xsl  configure.ac  fra-unsupervised.make  fra.prob  modes.xml  tagger.make
corpus/: wikipedia.20000.txt  wikipedia.5000.txt
fra-tagger-data/: fra.crp.txt
jaumeortola/: fra-adj.txt  fra-adv.txt  fra-noun.txt  infinitius-frances_tots.txt
test/: cuento-disam-expected.txt  cuento-input.txt  cuento-morph-expected.txt  cuento-tagger-expected.txt  tests.json
texts/: TRAINING
texts/codein/: apple.tagged.txt  apple.txt  comedie_musicale1.analysed.txt  comedie_musicale1.tagged.charlesw.txt  informatique1.analysed.txt  informatique1.tagged.charlesw.txt
